internal/xds/translator/testdata/out/xds-ir-sublinear/cors.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            foo/bar:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    path: foo/bar
                  name: first-route
                  route:
                    cluster: first-route-dest
                    upgradeConfigs:
                    - upgradeType: websocket
                  typedPerFilterConfig:
                    envoy.filters.http.cors:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                      allowCredentials: true
                      allowHeaders: x-header-1, x-header-2
                      allowMethods: '*'
                      allowOriginStringMatch:
                      - safeRegex:
                          regex: '*.example.com'
                      - exact: foo.bar.com
                      exposeHeaders: x-header-3, x-header-4
                      forwardNotMatchingPreflights: false
                      maxAge: "1000"
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
    name: first-listener/*
